kubernetes/agentgateway.dev/test/httpbin-route/localized/gateway.networking.k8s.io_v1_httproute_httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hostnames:
  - www.example.com
  parentRefs:
  - name: agentgateway-proxy
    namespace: agentgateway-system
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
