kubernetes/agentgateway.dev/test/httpbin-route/localized/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- gateway.networking.k8s.io_v1_httproute_httpbin.yaml
